package core.Customer.domain.Entities;

public class Customer {
}
