package core.Customer.domain.Entities;

public class CustomerRepresentative {
}
