@startuml

package "Customer " <<aggregate>> {
    class Customer <<Entity>> <<root>>{
    }

    class CustomerRepresentative <<Entity>>{
    }

    enum CustomerRepresentativeStatus <<Value Object>>{
    }

    class Address <<Value Object>>{
    }

    class VatNumber <<Value Object>>{
    }

    enum CustomerStatus <<Value Object>>{
    }

    enum CustomerType <<Value Object>>{
    }

    class Position <<Value Object>>{
    }

    'Customer -> x
    Customer  --> "1..*" CustomerRepresentative : represented by
    Customer --> "1" VatNumber : vat
    Customer --> "1" Address : address
    Customer --> "1" CustomerStatus : status
    Customer --> "1" CustomerType : type

    'Representative -> x
    CustomerRepresentative --> "1" Position : position
    CustomerRepresentative --> "1" CustomerRepresentativeStatus : status

}

package Shared {

    class Name <<Value Object>>{
    }

    class Email <<Value Object>>{
    }

    class PhoneNumber <<Value Object>>{
    }

    'Customer -> x
    Customer ----> "1" Name : name

    'Representative -> x
    CustomerRepresentative --> "1" Name : name
    CustomerRepresentative --> "1" Email : email
    CustomerRepresentative --> "1" PhoneNumber : phoneNumber
}

@enduml